# ResearchAgent

./: .gitignore  api.py  config.py  main.py  memory_manager.py  pyproject.toml  requirements.txt  ui.py
src/: orchestrator.py  router.py
src/agents/: architecture_agent.py  memory_agent.py  research_agent.py  verifier_agent.py  web_agent.py
src/helpers/: langsmith_tracker.py  prompts.py  search.py
